{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 203,
  "lineage": "23b569aa-c3d8-9a56-0802-1fdc198c3dba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058f5d859cf6ec283",
            "association_id": "eipassoc-06962ce0b5381c996",
            "domain": "vpc",
            "id": "eipalloc-058f5d859cf6ec283",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0480628138f54ce5d",
            "private_dns": "ip-10-0-0-198.ap-south-1.compute.internal",
            "private_ip": "10.0.0.198",
            "public_dns": "ec2-3-111-249-84.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.249.84",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic_IP"
            },
            "tags_all": {
              "Name": "Elastic_IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ee6644906ff4d6c",
            "arn": "arn:aws:ec2:ap-south-1:478766691246:instance/i-09a92748410f0f60e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a92748410f0f60e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins_mumbai",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bf042ebeb2078008",
            "private_dns": "ip-10-0-0-128.ap-south-1.compute.internal",
            "private_ip": "10.0.0.128",
            "public_ip": "3.110.212.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d41d8d14704545d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0076432e2578d3bc0",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04f3598cee3ab3705"
            ]
          },
          "dependencies": [
            "aws_security_group.pub-ins-sg",
            "aws_subnet.pub-subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:478766691246:internet-gateway/igw-053398a5770db68f7",
            "id": "igw-053398a5770db68f7",
            "owner_id": "478766691246",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-01a1d80e667e710f3"
          },
          "dependencies": [
            "aws_vpc.ninja-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058f5d859cf6ec283",
            "connectivity_type": "public",
            "id": "nat-0ddb0542cd57afff1",
            "network_interface_id": "eni-0480628138f54ce5d",
            "private_ip": "10.0.0.198",
            "public_ip": "3.111.249.84",
            "subnet_id": "subnet-0076432e2578d3bc0",
            "tags": {
              "Name": "ngw"
            },
            "tags_all": {
              "Name": "ngw"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:478766691246:route-table/rtb-01e3acd12b25b09c5",
            "id": "rtb-01e3acd12b25b09c5",
            "owner_id": "478766691246",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ddb0542cd57afff1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a1d80e667e710f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.ngw",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:478766691246:route-table/rtb-0ad35f149b3ca303c",
            "id": "rtb-0ad35f149b3ca303c",
            "owner_id": "478766691246",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-053398a5770db68f7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a1d80e667e710f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.ninja-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0940324fdd3deabe2",
            "route_table_id": "rtb-01e3acd12b25b09c5",
            "subnet_id": "subnet-0908058a4dad5aed7"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_nat_gateway.ngw",
            "aws_route_table.priv-route",
            "aws_subnet.priv-subnets",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed80bf1a172b385d",
            "route_table_id": "rtb-0ad35f149b3ca303c",
            "subnet_id": "subnet-0076432e2578d3bc0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub-route",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0705fb65d4e542e15",
            "route_table_id": "rtb-0ad35f149b3ca303c",
            "subnet_id": "subnet-0ef98ab93b00609ac"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub-route",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "priv-ins-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:478766691246:security-group/sg-0519096cbe779dcf3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0519096cbe779dcf3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.128/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220318093949079700000001",
            "name_prefix": "terraform-",
            "owner_id": "478766691246",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a1d80e667e710f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.jenkins",
            "aws_security_group.pub-ins-sg",
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub-ins-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:478766691246:security-group/sg-04f3598cee3ab3705",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04f3598cee3ab3705",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.37.69.95/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220318093354469300000001",
            "name_prefix": "terraform-",
            "owner_id": "478766691246",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01a1d80e667e710f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ninja-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:478766691246:subnet/subnet-0908058a4dad5aed7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0908058a4dad5aed7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "478766691246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet"
            },
            "tags_all": {
              "Name": "priv-subnet"
            },
            "vpc_id": "vpc-01a1d80e667e710f3"
          },
          "dependencies": [
            "aws_subnet.pub-subnets",
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:478766691246:subnet/subnet-0076432e2578d3bc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0076432e2578d3bc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "478766691246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet"
            },
            "tags_all": {
              "Name": "pub-subnet"
            },
            "vpc_id": "vpc-01a1d80e667e710f3"
          },
          "dependencies": [
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:478766691246:subnet/subnet-0ef98ab93b00609ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef98ab93b00609ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "478766691246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet"
            },
            "tags_all": {
              "Name": "pub-subnet"
            },
            "vpc_id": "vpc-01a1d80e667e710f3"
          },
          "dependencies": [
            "aws_vpc.ninja-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ninja-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:478766691246:vpc/vpc-01a1d80e667e710f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-044ae36e002ff8670",
            "default_route_table_id": "rtb-03815867dc193f1d7",
            "default_security_group_id": "sg-07f95333da39716a1",
            "dhcp_options_id": "dopt-6123880a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01a1d80e667e710f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03815867dc193f1d7",
            "owner_id": "478766691246",
            "tags": {
              "Name": "vpc_ngnix"
            },
            "tags_all": {
              "Name": "vpc_ngnix"
            }
          }
        }
      ]
    }
  ]
}